# faucet

./: .gitignore  Cargo.toml  README.md  index.scss
.github/workflows/: contracts.yml
app/: Cargo.toml  README.md
app/src/: main.rs
app/src/pages/: home.rs  page_not_found.rs
contracts/src/: Contract.sol  Faucet.sol  RustyFounder.sol
contracts/src/test/: Contract.t.sol  Faucet.t.sol  RustyFounder.t.sol
faucet-ui/: index.html
src/: main.rs
src/components/: text_input.rs
